--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,32 @@
   margin-bottom: 1rem; 
 }
 
+.containerMasterFooter { 
+  background-color: #222222;
+  height: 150px;  
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+}
+
+.containerMasterF {
+  width: 1024px; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+} 
+
+.itemFooter {
+  color: #F3F3F3; 
+  margin-bottom: 1rem;  
+}
+
+.itemFooterr {
+  color: #F3F3F3; 
+}
+
+
+
 
 
 
